tests/ui/typeck/issue-69378-ice-on-invalid-type-node-after-recovery.stderr
error: expected identifier, found `0`
  --> $DIR/issue-69378-ice-on-invalid-type-node-after-recovery.rs:3:14
   |
LL | struct Foo { 0: u8 }
   |        ---   ^ expected identifier
   |        |
   |        while parsing this struct

error: aborting due to 1 previous error

